--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "bootstrap": "5.3.3",
+    "axios": "^1.7.9",
     "next": "14.2.2",
     "react": "^18",
     "react-dom": "^18"
